<resources>
    <string name="app_name">Addeen</string>
    <string name="app_copyright">Copyright © Noscale - 2021\nAll right reserved</string>

    <string name="login_name">Name</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_gender">Gender</string>
    <string name="login_status">Status</string>
    <string name="login_phone">Phone</string>
    <string name="login_button">Login</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_pick_image">Pick Image</string>
    <string name="login_add">Add</string>

    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

    <string name="error_required_input">%1$s field is required.</string>
    <string name="error_email_format">Please enter your email address</string>
    <string name="error_phone_format">Value must be in Indonesia mobile number format eg. 6281911111111</string>
    <string name="error_photo_required">You need to take selfie first before submission</string>

    <string name="progress_title">Loading</string>
    <string name="progress_description">Please wait. It may take a while</string>

    <string name="profile_about_us">About Us</string>
    <string name="profile_activities">Majlis Activities</string>
    <string name="profile_logout">Log Out</string>

    <string name="about_contact_us">Contact Us</string>
    <string name="about_contact_us_content">Alamat : JL.Tanah Kusir HKSN RT 007 / RW 011\nKebayoran Lama Selatan, Kebayoran Lama, Jakarta Selatan\n12240\nPhone : 087782866141</string>

    <string name="tab_user">User</string>
    <string name="tab_recipients">Recipients</string>
    <string name="tab_scan">Scan</string>
    <string name="tab_profile">Profile</string>

    <string name="empty_title">Oops.. There is no record</string>
    <string name="empty_description">The record you\'re looking for does not seem to exist</string>

    <string name="status_received">Redeemed</string>
    <string name="status_broadcast_message">QR already broadcast</string>
    <string name="status_register">Registered</string>

    <string name="filter_title">Report</string>
    <string name="filter_year">Year</string>
    <string name="filter_print">Print this page</string>

    <string name="menu_report">Send Report</string>
    <string name="menu_filter">Filter</string>

    <string name="menu_detail">Detail</string>
    <string name="general_try_again">Try Again</string>

    <string name="logout_title">Log Out</string>
    <string name="logout_message">Do you want to log out ?</string>
    <string name="deletion_title">Deletion</string>
    <string name="deletion_message">Do you want to delete %1$s ?</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_decline">Decline</string>

    <string name="redeem_description">Terima kasih, Anda sudah mengambil daging Qurban.</string>
    <string name="qr_sent_description">Silahkan ambil daging Qurban dengan menunjukan QR Code yg sudah dikirimkan.</string>
    <string name="register_description">QR Code tidak ditemukan. Silahkan hubungi pihak kami untuk tindakan lebih lanjut.</string>

    <string name="total_recipients">Recipient</string>
    <string name="total_redemption">Redeemed</string>
    <string name="total_sent">Sent</string>
    <string name="total_prefix">%1$d Recipient(s)</string>
    <string name="total_details">Details</string>

    <string-array name="form_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <item name="b_iv_try_again" type="id"/>
</resources>