<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_13sdp"
    android:orientation="vertical"
    >

    <com.noscale.cerberus.ui.typography.ExtendedTextView
        android:id="@+id/tv_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:typography="h5"
        android:text="@string/filter_title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_filter_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38sdp"
        android:layout_marginBottom="@dimen/_26sdp"
        android:hint="@string/filter_year"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/et_filter_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/filter_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginRight="@dimen/_13sdp"
            app:srcCompat="@drawable/ic_print"
            />

        <com.noscale.cerberus.ui.typography.ExtendedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typography="caption"
            android:layout_gravity="center_vertical"
            android:text="@string/filter_print"
            />

    </LinearLayout>

</LinearLayout>