<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/_13sdp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/white"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_13sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        app:typography="subtitle_1"
                        android:text="@string/login_name"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:typography="subtitle_1"
                        android:text=":"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:id="@+id/tv_detail_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        app:typography="caption"
                        tools:text="@tools:sample/lorem"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:orientation="horizontal">

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        app:typography="subtitle_1"
                        android:text="@string/login_email"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:typography="subtitle_1"
                        android:text=":"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:id="@+id/tv_detail_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        app:typography="caption"
                        tools:text="@tools:sample/lorem"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:orientation="horizontal">

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        app:typography="subtitle_1"
                        android:text="@string/login_phone"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:typography="subtitle_1"
                        android:text=":"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:id="@+id/tv_detail_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        app:typography="caption"
                        tools:text="@tools:sample/lorem"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:orientation="horizontal">

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        app:typography="subtitle_1"
                        android:text="@string/login_gender"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:typography="subtitle_1"
                        android:text=":"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:id="@+id/tv_detail_gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        app:typography="caption"
                        tools:text="@tools:sample/lorem"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        app:typography="subtitle_1"
                        android:text="@string/login_status"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:typography="subtitle_1"
                        android:text=":"
                        />

                    <com.noscale.cerberus.ui.typography.ExtendedTextView
                        android:id="@+id/tv_detail_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        app:typography="caption"
                        tools:text="@tools:sample/lorem"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>